# bigbugdata

./: README.md  bigbugdata.py  environment.yml  filter_rrpm_by_taxid.py  modify_reports.py  pyproject.toml
old/: bigbugdata.py  combine-bug-data  combine-kraken-bug-data.py  kraken_tophits_15.py
scripts/: filter_reports_by_taxid.py  modify_reports.py
