[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bigbugdata"
version = "0.2.0"
description = "Big data for bugs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Thomas Brier", email = "t.o.brier@bham.ac.uk" }]
maintainers = [{ name = "Thomas Brier", email = "t.o.brier@bham.ac.uk" }]
keywords = ["bigbugdata", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = ["scipy"]

[project.scripts]
bigbugdata = "bigbugdata:main"

[project.urls]
GitHub = "https://github.com/tombch/bigbugdata"
